--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <maven.compiler.source>1.6</maven.compiler.source>
   <maven.compiler.target>1.6</maven.compiler.target>
 </properties>
+    <!-- 
    <dependencies>
     <dependency>
       <groupId>org.sonarsource.sonarqube</groupId>
@@ -25,9 +26,9 @@
       <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
-       <!--  <version>3.7.0.1746</version> -->
+      <version>3.7.0.1746</version> 
       </plugin>
     </plugins>
   </pluginManagement>
-</build>
+</build> -->
 </project>
