--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.10.1</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+         <configuration>
+         <archive>
+                    <addMavenDescriptor>false</addMavenDescriptor>
+         </archive>
+         </configuration>
+         </plugin>
       </plugins>
     </pluginManagement>
   </build>
