--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.example</groupId>
   <artifactId>Hello_world</artifactId>
-  <!-- <version>0.0.1-SNAPSHOT</version> -->
-  <packaging>war</packaging>
-  <version>1</version>
-  <name>Hello_world Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+ <version>0.0.1-SNAPSHOT</version>
+
   <properties>
   <maven.compiler.source>11</maven.compiler.source>
   <maven.compiler.target>11</maven.compiler.target>
